@@ -7,3 +7,6 @@ copyright_year   = 2019
 [@Author::DBOOK]
 :version = 0.036
 pod_tests = 1
+Test::ReportPrereqs.include[0] = Time::Piece
+Test::ReportPrereqs.include[1] = Time::Moment
+Test::ReportPrereqs.include[2] = DateTime
