@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Skip strptime tests when the function is not provided by the system
 
 0.001     2019-07-03 22:33:35 EDT
   - First release
